<resources>
    <string name="app_name">SideProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>
    <string name="signIn">Sign in</string>
    <string name="forgotPwd">Forgot Password?</string>
    <string name="splashText">Powered by:</string>
    <string name="redeem_points">Redeem Points</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="im_new">Im new</string>
    <string name="sign_up">Sign Up</string>
    <string name="emailEt">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">email_input</string>
    <string name="account_settings">Account Settings</string>
    <string name="support">Support</string>
    <string name="title_activity_forgot_pwd">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="slide1">UpTown just became more memorable</string>
    <string name="slide2">Click now to get started!</string>
    <string name="slide3">Some text to go here with Pagination</string>
    <string name="slide4">Some text to go here with Pagination</string>
    <string name="pointsTv">Points:</string>
    <string name="pointCount">0</string>
    <string name="locationTv">Location:</string>
    <string name="area">Towson</string>
    <string name="green_turtle">Green Turtle</string>
    <string name="rec_room">Rec Room</string>
    <string name="userName">Name</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
