<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_input_get"
            android:fontFamily="@font/helveticaneue_medium"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_redeem"
            android:icon="@android:drawable/ic_menu_add"
            android:fontFamily="@font/helveticaneue_medium"
            android:title="@string/redeem_points" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:fontFamily="@font/helveticaneue_medium"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_menu_revert"
            android:fontFamily="@font/helveticaneue_medium"
            android:title="@string/logout" />

    </group>
</menu>
