<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_wallpaper"
    android:alpha="0.8"
    tools:context="project.uptown.sideproject.RegisterActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toTopOf="@+id/fNameEt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        android:src="@drawable/ic_baseline_camera_alt"
        android:tint="#FFFFFF"
        />

    <EditText
        android:id="@+id/fNameEt"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/helveticaneue_medium"
        android:hint="@string/first_name"
        android:textColorHint="#FFFFFF"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/lNameEt"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/lNameEt"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/helveticaneue_medium"
        android:hint="@string/last_name"
        android:textColorHint="#FFFFFF"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/emailEt"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fNameEt" />

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/helveticaneue_medium"
        android:hint="@string/emailEt"
        android:textColorHint="#FFFFFF"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/pwdEt"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lNameEt" />

    <EditText
        android:id="@+id/pwdEt"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/helveticaneue_medium"
        android:hint="@string/password"
        android:textColorHint="#FFFFFF"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/conPwdEt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEt" />

    <EditText
        android:id="@+id/conPwdEt"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/helveticaneue_medium"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/gender_spinner"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwdEt" />

    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/helveticaneue_medium"
        
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/signUpBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conPwdEt" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttonshape"
        android:ems="10"
        android:fontFamily="@font/helveticaneue_medium"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_spinner" />

</android.support.constraint.ConstraintLayout>