<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/app_bar_redeem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <RelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:background="@drawable/side_nav_bar"
            >

            <ImageView
                android:id="@+id/redeem_photo"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="88dp"
                android:background="@drawable/redeem_photo"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="400dp"
                android:layout_marginTop="185dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/redeem_background" >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/pointsTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="18dp"
                        android:layout_toEndOf="@+id/pointCount"
                        android:text="@string/pointsTv"
                        android:textColor="#979797"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/pointCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/pointsTv"
                        android:layout_alignStart="@id/redeem_photo"
                        android:layout_marginTop="25dp"
                        android:layout_marginStart="25dp"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="#979797"
                        android:text="@string/pointCount"
                        tools:ignore="NotSibling" />

                    <TextView
                        android:id="@+id/locationTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginEnd="18dp"
                        android:text="@string/locationTv"
                        android:textColor="#979797"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />

                    <TextView
                        android:id="@+id/locationArea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginEnd="18dp"
                        android:layout_marginTop="25dp"
                        android:layout_below="@id/locationTv"
                        android:text="@string/area"
                        android:textColor="#979797"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignBottom="@+id/pointCount"
                        android:layout_centerVertical="true"
                        android:background="#979797" />

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/view"
                        android:layout_marginTop="12dp">

                    </GridLayout>

                </RelativeLayout>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@drawable/side_menu_bg"
        app:itemTextColor="#FFFFFF"
        app:itemIconTint="#FFFFFF"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>
